fix: Replicate Webhook에서 SUPIR 모델 output 파싱 실패 수정 (#441)
SUPIR 모델은 output을 String으로 반환하는데 기존 DTO는 List<String>만 지원
Object로 받아 String/List 모두 처리하도록 수정